selfhost/test/typechecker/indexing/error_indexing_string_nullable.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  str[0]
     ^
Type 'String?' is not indexable
