selfhost/test/typechecker/indexing/error_indexing_string_nullable.abra
val str: String? = "abcd"
str[0]